fix: fixed header alignment and footer

--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@ body {
   margin: 0;
 }
 
-main {
+.app {
   display: grid;
   grid-template-areas:
     ".  topbar      ."
@@ -22,12 +22,14 @@ header {
   grid-area: topbar;
 
   margin: auto;
+  align-content: center;
 }
 
 footer {
   grid-area: footer;
 
   height: 8rem;
+  padding-bottom: 0.5rem;
   background-color: lightgrey;
 }
 
@@ -65,6 +67,15 @@ address {
   height: 2rem;
 }
 
+.header__img{
+  display: block;
+  margin: auto;
+}
+
+.header__text, .header__subheader-text {
+  text-align: center;
+}
+
 #profile_pic {
   margin-top: 1rem;
   border-radius: 50%;
@@ -73,17 +84,12 @@ address {
 @media screen and (max-width: 600px) {
   footer {
     height: 16rem;
+    
   }
   .row {
     flex-direction: column;
-  } 
+  }
   .code-example {
     display: none;
-  }
-}
-
-@media screen and (max-width: 420px) {
-  footer {
-    height: 17rem;
   }
 }
